feat(backend): Добавлена ручка results/best для получения лучших результатов по wpm, cpm
