# openapi.yaml
@@ -188,6 +188,34 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
+  /results/best:
+    get:
+      summary: Получить лучшие результаты тестирования
+      tags:
+        - Results
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: by
+          in: query
+          schema:
+            type: string
+            enum: ['cpm', 'wpm']
+          required: true
+      responses:
+        "200":
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResults"
+        "401":
+          description: Не авторизован
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
 components:
   schemas:
     Text:
